<resources>
    <string name="app_name">skif.me</string>
    <string name="auth_password">Введите пароль</string>
    <string name="auth_email">Введите логин</string>
    <string name="auth_login">войти</string>
    <string name="register">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="reg_name">Введите имя</string>
    <string name="reg_email">Введите e-mail</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="reg_title_toolbar">Регистрация</string>
    <string name="app_title">Skif.me</string>
    <string name="reg_pass">Введите пароль</string>
    <string name="en_lang">English</string>
    <string name="kz_lang">Казахский</string>
    <string name="ru_lang">Русский</string>
    <string name="choose_lang">Выберите язык:</string>
    <string name="main_scr_title">Главный экран</string>
    <string name="new_device">Новое устройство</string>
    <string name="new_geozone">Новая геозона</string>
    <string name="geozone_title">Геозоны</string>
    <string name="notifications">Уведомления</string>
    <string name="device_list">Устройства</string>
    <string name="title_activity_maps_geo">Map</string>
    <string name="title_activity_maps">Выберите зону</string>
    <string name="delete_geo">Удалить геозону</string>


    <string name="menu_title_map">Карта</string>
    <string name="menu_title_devices">Устройства</string>
    <string name="menu_title_geozones">Геозоны</string>
    <string name="menu_title_menu">Меню</string>
    <string name="search_title">Поиск устройств и геозон</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="help">Помощь</string>
    <string name="about">О приложении</string>
    <string name="objects">Объекты</string>
    <string name="control">Контроль</string>
    <string name="object_title">Объекты на карте</string>
    <string name="add_object">Добавить объект</string>
    <string name="object_name">Имя объекта</string>
    <string name="sim">Номер SIM</string>
    <string name="imei">Номер IMEI</string>
    <string name="qr_ident">Идентификация по QR-коду</string>
    <string name="control_name">Бассейн</string>
    <string name="last_time">Связь: 5 мин. назад</string>
    <string name="battery_lvl">30%</string>
    <string name="control_name_hint">Название</string>
    <string name="object_add">Объект</string>
    <string name="add_control">Добавить контроль</string>
    <string name="address_hint">Адрес</string>
    <string name="week_days">Дни контроля</string>
    <string name="control_start_day">Начало контроля</string>
    <string name="object">Объект</string>
    <string name="end_control">Конец контроля</string>
    <string name="notify_in">Уведомление о посещении</string>
    <string name="notify_out">Уведомление о непосещении</string>
    <string name="delete_object">Удалить</string>
    <string name="call">Вызов</string>
    <string name="history">История</string>
    <string name="lang_title">Русский</string>
    <string name="pick_language">Выберите язык</string>
    <string name="tracker_type">Тип устройства</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="pick_avatar">Аватар объекта</string>
    <string name="history_fab">История</string>
    <string name="call_tv">Вызов</string>

    <string-array name="objects_item">
        <item>Петя</item>
        <item>Маша</item>
        <item>Катя</item>
        <item>Света</item>
        <item>Бобик</item>
        <item>Аня</item>
    </string-array>

    <string-array name="langs_array">
        <item>Русский</item>
        <item>Английский</item>
        <item>Казахский</item>
    </string-array>

    <string-array name="avatar_methods_array">
        <item>ВЫБРАТЬ ИЗ ГАЛЕРЕИ АВАТАРОВ</item>
        <item>ВЫБРАТЬ НА ТЕЛЕФОНЕ</item>
        <item>СДЕЛАТЬ ФОТО</item>
    </string-array>



</resources>
