<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/search_title"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/menu_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/search_title"
            app:showAsAction="ifRoom"/>



</menu>